test/runnable/string-global-constant.sam
// ERROR_COUNT: 0

class Main {
  function main(): unit = if "a" == "a" then println("OK") else println("BAD")
}
