test/bad/overflow-int.sam
// ERROR_COUNT: 1
// overflow-int.sam:5:26-5:56: [SyntaxError]: Not a 64-bit integer.

class Main {
  function main(): int = 999999999999999999999999999999
}
